# Native-LLM-for-Android

./: README.md
Do_Quantize/Dynamic_Quant/: Q4.py  fp16.py  q4_Weight_Only.py  q4_f16.py  q4_f32.py  q4_q8_f16.py  q4_q8_f32.py  q8_f16.py  q8_f32.py
Export/Gemma/: Gemma_Export_A.py  Gemma_Export_B.py  Gemma_Export_C.py
Export/Gemma/modeling_modified_A/: modeling_gemma.py
Export/Gemma/modeling_modified_C/: modeling_gemma.py
Export/MiniCPM/: MiniCPM_Export_Split_AB.py
Export/MiniCPM-1B/: MiniCPM_Export.py
Export/MiniCPM/MiniCPM-1B/: MiniCPM_Export.py
Export/MiniCPM/MiniCPM-2B/: MiniCPM_Export.py  MiniCPM_Export_Split_AB.py
Export/MiniCPM/modeling_modified_A/: modeling_minicpm.py
Export/MiniCPM/modeling_modified_B/: modeling_minicpm.py
Export/Octopus/: Octopus_V2_Export_A.py  Octopus_V2_Export_B.py  Octopus_V2_Export_C.py
Export/Octopus/modeling_modified_A/: modeling_gemma.py
Export/Octopus/modeling_modified_B/: modeling_gemma.py
Export/Octopus/modeling_modified_C/: modeling_gemma.py
Export/Octopus_ONNX/: Octopus_Export.py
Export/Octopus_V2/: Octopus_Export.py
Export/Octopus_V2/modeling_modified/: modeling_gemma.py
Export/Phi/: Phi_Export.py
Export/Phi/modeling_modified_A/: modeling_phi.py
Export/Phi/modeling_modified_B/: modeling_phi.py
Export/Qwen/: Qwen_Export.py
Export/Qwen/modeling_modified/: modeling_qwen2.py
Export/StableLM/: StableLM_Export.py
Export/StableLM/StableLM2-1.6B/: StableLM_Export.py
Export/StableLM/StableLM2-3B/: StableLM_Export.py
Export/StableLM/modeling_modified/: modeling_stablelm.py
Export/Yuan/: Yuan_Export.py
Export/Yuan/modeling_modified_A/: yuan_hf_model.py
Export/Yuan/modeling_modified_B/: yuan_hf_model.py
Export/Yuan/modeling_modified_C/: yuan_hf_model.py
Export_ONNX/: Export_Vocab.py  Test_KV_Quantization.py
Export_ONNX/Gemma/: Gemma_Export.py  Gemma_Export_A.py  Gemma_Export_B.py  Gemma_Export_C.py  Inference.py  Inference_with_IOBinding.py  inference_with_IOBinding.py
Export_ONNX/Gemma/Gemma/: Gemma_Export_A.py  Gemma_Export_B.py  Gemma_Export_C.py
Export_ONNX/Gemma/modeling_modified_A/: modeling_gemma.py  modeling_gemma2.py
Export_ONNX/Gemma/modeling_modified_B/: modeling_gemma.py  modeling_gemma2.py
Export_ONNX/Gemma/modeling_modified_C/: modeling_gemma.py  modeling_gemma2.py
Export_ONNX/HunYuan-MT/: Export_HunYuan_MT.py  Inference_HunYuan_ONNX.py  Optimize_ONNX.py  Shared_Merged.py
Export_ONNX/HunYuan-MT/Beam_Search/: HunYuan_MT_Export.py
Export_ONNX/HunYuan-MT/Greedy_Search/: HunYuan_MT_Export.py
Export_ONNX/InternLM/: InternLM_Export.py
Export_ONNX/InternLM/modeling_modified/: modeling_internlm2.py
Export_ONNX/InternVL/Mono/: InternVL_Export.py  export_config.py
Export_ONNX/Llama/: Llama_Export.py
Export_ONNX/Llama/modeling_modified/: modeling_llama.py
Export_ONNX/MiniCPM/: Export_with_BeamSearch.py  MiniCPM_Export.py
Export_ONNX/MiniCPM/Beam_Search/: MiniCPM_Export.py
Export_ONNX/MiniCPM/MiniCPM-1B/: MiniCPM_Export.py
Export_ONNX/MiniCPM/MiniCPM-2B/: MiniCPM_Export.py
Export_ONNX/MiniCPM/MiniCPM-2B-single/: MiniCPM_Export.py
Export_ONNX/MiniCPM/MiniCPM-2B-split/: MiniCPM_Export.py
Export_ONNX/MiniCPM/v4/: Export_MiniCPM.py  Inference_MiniCPM_ONNX.py  Optimize_ONNX.py  Shared_Merged.py
Export_ONNX/MiniCPM/v5/: Inference_MiniCPM_ONNX.py  MiniCPM_Export.py  Optimize_ONNX.py  Shared_Merged.py
Export_ONNX/Octopus/: Octopus_V2_Export_A.py  Octopus_V2_Export_B.py  Octopus_V2_Export_C.py
Export_ONNX/Octopus/modeling_modified_A/: modeling_gemma.py
Export_ONNX/Octopus/modeling_modified_B/: modeling_gemma.py
Export_ONNX/Octopus/modeling_modified_C/: modeling_gemma.py
Export_ONNX/Phi/: Phi_Export.py
Export_ONNX/Phi/modeling_modified_A/: modeling_phi.py  modeling_phi3.py
Export_ONNX/Phi/modeling_modified_B/: modeling_phi.py  modeling_phi3.py
Export_ONNX/Phi/single/: Phi_Export.py
Export_ONNX/Phi/split/: Phi_Export.py
Export_ONNX/Qwen/: Qwen_Export.py
Export_ONNX/Qwen/Dynamic_Axes/: Qwen_Export.py
Export_ONNX/QwenVL/: QwenVL_Export.py  QwenVL_Export_ABC.py  QwenVL_Export_ABCD.py  QwenVL_Export_D.py  QwenVL_Export_E.py  export_config.py
Export_ONNX/Yuan/: Update Soon.txt  Yuan_Export.py
Gemma_ONNX/: build.gradle
Gemma_ONNX/app/: build.gradle
Hunyuan_MT/: build.gradle  gradle.properties  local.properties  settings.gradle
Hunyuan_MT/app/: build.gradle  lint.xml  proguard-rules.pro
Hunyuan_MT/app/src/main/cpp/: CMakeLists.txt  configs.h  llm_runtime_state.h  loadModels.cpp  ort_helpers.h  processLLM.cpp  project.cpp  project.h  tokenizer.cpp  tokenizer.hpp  unicode.cpp  unicode.hpp  unicode_data.cpp  user_settings.h
InternVL_Mono/Dynamic_Axes/app/src/main/cpp/: CMakeLists.txt  project.cpp  project.h  tokenizer.cpp
MiniCPM/: build.gradle
MiniCPM/app/: build.gradle
MiniCPM_1B_ONNX/: gradle.properties
MiniCPM_ONNX/MiniCPM_2B_single/: gradle.properties
MiniCPM_ONNX/MiniCPM_2B_split/: build.gradle
Octopus_ONNX/app/: build.gradle
Phi_ONNX/app/: build.gradle
Phi_ONNX/split/app/src/main/cpp/: CMakeLists.txt  project.cpp  project.h
Qwen/: gradle.properties  settings.gradle
Qwen/app/: build.gradle  proguard-rules.pro
Qwen/app/src/main/cpp/: CMakeLists.txt  glRender.cpp  glRender.h  llm_runtime_state.h  memBandwidth.cpp  ort_helpers.h  processLLM.cpp  tokenizer.hpp  unicode.cpp  user_settings.h  vision_runtime.h
Qwen/v3/: build.gradle  gradle.properties  settings.gradle
Qwen/v3/app/src/main/cpp/: CMakeLists.txt  llm_runtime_state.h  memBandwidth.cpp  ort_helpers.h  processLLM.cpp  project.cpp  project.h  tokenizer.cpp  tokenizer.hpp  user_settings.h
QwenVL/: build.gradle
QwenVL/app/: build.gradle
QwenVL_ONNX/: README.md  gradle.properties  local.properties
QwenVL_ONNX/app/: build.gradle  local.properties
QwenVL_ONNX/app/src/main/cpp/: CMakeLists.txt  project.cpp  project.h
Qwen_1_8B_ONNX/app/: build.gradle
Qwen_ONNX/: build.gradle
Qwen_ONNX/app/: build.gradle
StableLM_ONNX/StableLM2-1.6B/: settings.gradle
StableLM_ONNX/StableLM2-1.6B/app/src/main/cpp/: CMakeLists.txt  project.cpp  project.h
(+387 files in other folders)
